# semantic_probing

./: .gitignore  CONTRIBUTING.md  MODULAR_BRAIN_AI_EXPERIMENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
data/benchmarks/: coherence_traces.jsonl  verification_benchmark.jsonl
experiments/: antonym_demo.py
paper/: notes.md
scripts/: prepare_entities.py  prepare_lexicon.py
src/reports/: coherence_baseline.json  full_pipeline_results.json
src/semantic_probing/: __init__.py
src/semantic_probing/analysis/: __init__.py  correlation.py  signatures.py
src/semantic_probing/data_curation/: dimension_datasets.py
src/semantic_probing/encoding/: __init__.py  semantic_dimensions.py  sparse_ternary.py  text_encoder.py
src/semantic_probing/experiments/: coherence_benchmark.py  full_pipeline_benchmark.py  functional_extraction.py
src/semantic_probing/grounding/: __init__.py  entity.py  linguistic.py
src/semantic_probing/integration/: experience_memory.py  wiki_grounding.py
src/semantic_probing/pipeline/: semantic_router.py  unified_verifier.py
src/semantic_probing/probes/: __init__.py  primitives.py  reasoning.py  semantic.py
src/semantic_probing/validation/: __init__.py  sae_comparison.py
tests/: benchmark_performance.py  showcase_capabilities.py  test_coherence_benchmark.py  test_encoding.py  test_headline_results.py  test_multiscale.py  test_probes.py  test_proof_cache.py  test_wiki_integration.py
